src/components/onlineusers/OnlineUsers.css
.online-users {
    width: 200px;
    z-index: 10;
    min-width: 200px;
    min-height: 100vh;
    box-sizing: border-box;
    padding: 20px;
    background-color: var(--heading-color);
    color: #fafafa;
    border-left: solid 2px rgb(63, 63, 63);
    cursor: pointer;
    transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
}

.online-users h2 {
    text-align: right;
    margin: 60px 0 30px 0;
    padding: 0 0 10px 0;
    font-size: 1.2rem;
    font-weight: 300;
}

.online-users .user-item {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    margin: 20px auto;
    padding: 2px;
    border-radius: 5px;
}
.online-users .user-item:hover {
    background-color: #282828;
    color: var(--text-color);
}

.online-users .user-item .user-name {
    font-size: 0.8rem;
    margin-left: 20px;
    margin-right: auto;
}

.online-users .user-item .avatar {
    max-width: 30px;
    max-height: 30px;
    border: 1px solid rgb(255, 255, 255);
}

.online-users .user-online {
    display: inline-block;
    width: 8px;
    height: 8px;
    border-radius: 50%;
    background-color: rgb(148, 189, 148);
    margin: 1px 4px 0 0;
    box-shadow: 0px 0px 2px 0px rgb(47, 182, 43);
}

.online-side {
    opacity: 0;
}

@media screen and (max-width: 768px) {
    .online-users {
        position: fixed;
        top: 0;
        left: 0;
        width: 100%;
        min-width: unset;
        min-height: unset;
        max-height: 100px;
        z-index: 10;
        box-sizing: border-box;
        padding: 20px;
        display: flex;
        background-color: var(--heading-color);
        color: #fafafa;
        border-left: solid 2px rgb(63, 63, 63);
        cursor: pointer;
        transition: all 0.3s cubic-bezier(0.19, 1, 0.22, 1);
        transform: translateY(-100%);
    }
    
    .online-users h2 {
        opacity: 0;
    }
    
    .online-users .user-item {
        display: flex;
        flex-direction: row; 
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;
        margin: 20px auto;
        padding: 2px;
        border-radius: 5px;
    }

    .online-side {
        position: fixed;
        opacity: 1;
        top: 12vh;
        left: 10vw;
        background-color: #121212;
        border-radius: 3px;
        cursor: pointer;
    }

    .active {
        transform: translateY(0);
    }
}

